# Cyber-IA-Project-

./: .env.example  .gitignore  README.md  agent.py  batch_analyzer.py  config.json  email_parser.py  feature_extractor.py  legit_sample.eml  phishing_sample.eml  pyproject.toml  report.py  requirements.txt
config/: default.yml
docker/: Dockerfile  docker-compose.yml
exegol-resources/setup/: load_user_setup.sh
ransomemu/: __init__.py  cli.py
ransomemu/agent/: __init__.py  chains.py  llm_client.py  tools.py
ransomemu/agent/prompts/: __init__.py  lateral_smb.j2  lateral_winrm.j2  lateral_wmi.j2  recon_analysis.j2
ransomemu/core/: __init__.py  config.py  logger.py  safety.py
ransomemu/modules/crypto/: __init__.py  simulator.py
ransomemu/modules/lateral/: __init__.py  base.py  smb_move.py  winrm_move.py  wmi_move.py
ransomemu/modules/propagation/: __init__.py  engine.py
ransomemu/modules/recon/: __init__.py  ad_enum.py  bloodhound.py  network.py
ransomemu/reporting/: __init__.py  collector.py  exporter.py
ransomemu/reporting/templates/: __init__.py  report.html.j2
templates/payloads/: marker.ps1  marker.sh
tests/: conftest.py  test_agent.py  test_config.py  test_crypto.py  test_lateral.py  test_propagation.py  test_safety.py
